--- a/index.html
+++ b/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Мій перший сайт</title>
-  </head>
-  <body>
-    <h1>Привіт, світ!</h1>
-    <p>Це мій перший сайт, зроблений через GitHub з телефона 🎉</p>
-  </body>
+<html lang="uk">
+<head>
+  <meta charset="UTF-8" />
+  <title>Мій стильний сайт</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f9f9f9;
+      color: #333;
+      max-width: 700px;
+      margin: 40px auto;
+      padding: 20px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 10px;
+    }
+    h1 {
+      color: #2c3e50;
+    }
+    p {
+      font-size: 18px;
+      line-height: 1.6;
+    }
+    a {
+      color: #2980b9;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>Вітаю на моєму сайті!</h1>
+  <p>Це приклад гарного простого дизайну.</p>
+  <p>Тут можна додати посилання, фото або ще щось цікаве.</p>
+  <a href="https://github.com/">Мій GitHub</a>
+</body>
 </html>
