--- a/index.html
+++ b/index.html
@@ -1,73 +1,68 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Махаони в лісі</title>
   <style>
-    /* Фонове зображення лісу на всю сторінку */
     body {
       margin: 0;
       padding: 0;
-      overflow-x: hidden;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      overflow: hidden;
       background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1350&q=80') no-repeat center center fixed;
       background-size: cover;
-      height: 100vh;
-      position: relative;
-      color: white;
-      text-shadow: 2px 2px 4px #000000aa;
+      font-family: Arial, sans-serif;
+      color: #fff;
+      text-shadow: 1px 1px 3px #000;
     }
-    h1 {
+
+    h1, p {
       text-align: center;
-      margin: 20px 0 10px;
-      font-size: 3em;
-      font-weight: 700;
+      margin-top: 20px;
     }
-    p {
-      text-align: center;
-      font-size: 1.5em;
-      margin-bottom: 40px;
-    }
-    /* Метелики махаони */
+
     .butterfly {
       position: absolute;
-      width: 80px;
-      height: 80px;
+      width: 70px;
+      height: 70px;
       background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Graphium_agalantis_MHNT_dos.jpg/120px-Graphium_agalantis_MHNT_dos.jpg') no-repeat center/contain;
-      animation-timing-function: linear;
-      opacity: 0.85;
-      filter: drop-shadow(0 0 5px rgba(0,0,0,0.7));
+      animation: fly 15s linear infinite;
     }
-    /* Анімація руху */
+
     @keyframes fly {
       0% {
-        transform: translateX(0) translateY(0) rotate(0deg);
-        opacity: 0.85;
-      }
-      50% {
-        transform: translateX(100vw) translateY(20vh) rotate(180deg);
+        transform: translate(-100px, 0) rotate(0deg);
         opacity: 1;
       }
-      100% {
-        transform: translateX(0) translateY(40vh) rotate(360deg);
-        opacity: 0.85;
+      50% {
+        transform: translate(100vw, 100px) rotate(180deg);
+        opacity: 0.9;
       }
+      100% {
+        transform: translate(-100px, 200px) rotate(360deg);
+        opacity: 1;
+      }
+    }
+
+    audio {
+      display: block;
+      margin: 20px auto;
     }
   </style>
 </head>
 <body>
-  <h1>Махаони в лісі 🦋🌲</h1>
-  <p>Насолоджуйся красою природи під приємну музику!</p>
 
-  <audio controls autoplay loop>
-    <source src="https://cdn.pixabay.com/download/audio/2022/03/23/audio_87908448bb.mp3?filename=summer-joy-112331.mp3" type="audio/mpeg" />
-    Ваш браузер не підтримує аудіо елемент.
+  <h1>Метелики махаони 🦋</h1>
+  <p>Натисни відтворення нижче, щоб почути музику</p>
+
+  <audio controls>
+    <source src="https://cdn.pixabay.com/download/audio/2022/03/23/audio_87908448bb.mp3?filename=summer-joy-112331.mp3" type="audio/mpeg">
+    Ваш браузер не підтримує аудіо.
   </audio>
 
-  <!-- Метелики махаони -->
-  <div class="butterfly" style="top: 15vh; left: -80px; animation: fly 20s linear infinite;"></div>
-  <div class="butterfly" style="top: 40vh; left: -90px; animation: fly 25s linear infinite 7s;"></div>
-  <div class="butterfly" style="top: 60vh; left: -70px; animation: fly 22s linear infinite 12s;"></div>
+  <!-- Метелики -->
+  <div class="butterfly" style="top: 100px; left: -80px;"></div>
+  <div class="butterfly" style="top: 200px; left: -120px; animation-delay: 5s;"></div>
+  <div class="butterfly" style="top: 300px; left: -60px; animation-delay: 10s;"></div>
 
 </body>
 </html>
