--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="uk">
 <head>
@@ -10,51 +11,83 @@
       overflow: hidden;
       background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1350&q=80') no-repeat center center fixed;
       background-size: cover;
-      font-family: Arial, sans-serif;
-      color: #fff;
-      text-shadow: 1px 1px 3px #000;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      color: white;
+      text-align: center;
     }
 
-    h1, p {
-      text-align: center;
+    h1 {
       margin-top: 20px;
+      font-size: 3em;
+      text-shadow: 2px 2px 4px #000;
+    }
+
+    .greeting {
+      font-size: 3em;
+      margin: 50px 20px;
+      font-weight: bold;
+      color: #fffd7e;
+      text-shadow: 0 0 10px #ffaa00, 0 0 20px #ff9900, 2px 2px 6px #000;
+      animation: glow 2s infinite alternate;
+    }
+
+    @keyframes glow {
+      from {
+        text-shadow: 0 0 10px #ffaa00, 0 0 20px #ff9900;
+      }
+      to {
+        text-shadow: 0 0 20px #ffea00, 0 0 30px #ffcc00;
+      }
+    }
+
+    p {
+      font-size: 1.2em;
+      text-shadow: 1px 1px 3px #000;
     }
 
     .butterfly {
       position: absolute;
-      width: 70px;
-      height: 70px;
+      width: 80px;
+      height: 80px;
       background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/0b/Graphium_agalantis_MHNT_dos.jpg/120px-Graphium_agalantis_MHNT_dos.jpg') no-repeat center/contain;
       animation: fly 15s linear infinite;
+      opacity: 0.9;
     }
 
     @keyframes fly {
       0% {
-        transform: translate(-100px, 0) rotate(0deg);
+        transform: translateX(-100px) translateY(0) rotate(0deg);
         opacity: 1;
       }
       50% {
-        transform: translate(100vw, 100px) rotate(180deg);
-        opacity: 0.9;
+        transform: translateX(100vw) translateY(100px) rotate(180deg);
+        opacity: 0.8;
       }
       100% {
-        transform: translate(-100px, 200px) rotate(360deg);
+        transform: translateX(-100px) translateY(200px) rotate(360deg);
         opacity: 1;
       }
     }
 
     audio {
       display: block;
-      margin: 20px auto;
+      margin: 30px auto 10px;
+      width: 80%;
     }
   </style>
 </head>
 <body>
 
   <h1>Метелики махаони 🦋</h1>
-  <p>Натисни відтворення нижче, щоб почути музику</p>
 
-  <audio controls>
+  <!-- ✨ ВЕЛИКЕ ПОБАЖАННЯ -->
+  <div class="greeting">
+    Приємного дня і чудового настрою!
+  </div>
+
+  <p>Натисніть кнопку нижче, щоб увімкнути музику</p>
+
+  <audio id="background-music" controls>
     <source src="https://cdn.pixabay.com/download/audio/2022/03/23/audio_87908448bb.mp3?filename=summer-joy-112331.mp3" type="audio/mpeg">
     Ваш браузер не підтримує аудіо.
   </audio>
@@ -63,6 +96,13 @@
   <div class="butterfly" style="top: 100px; left: -80px;"></div>
   <div class="butterfly" style="top: 200px; left: -120px; animation-delay: 5s;"></div>
   <div class="butterfly" style="top: 300px; left: -60px; animation-delay: 10s;"></div>
+
+  <script>
+    const audio = document.getElementById('background-music');
+    audio.play().catch(() => {
+      console.log("Музика не запустилась автоматично — натисніть Play.");
+    });
+  </script>
 
 </body>
 </html>
